--- a/resources/templates/statement/index.html
+++ b/resources/templates/statement/index.html
@@ -1,11 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
+    <div class="col-md-offset-1 col-md-8 hidden-print">
+        <h2>Настройка выборки</h2>
+        <p>Оставьте пустым чтобы получить полный состав. Имя фирмы чувствительно к регистру.
+        Большая часть фирм записана в верхнем ригистре.
+        </p>
+        <form class="form-horizontal" action="{{servlet-context}}/statements">
+            <input type="hidden" name="id" value="{{id}}">
+            <div class="form-group">
+                <label for="firmName" class="col-md-3 control-label">Название фирмы</label>
+                <div class="col-md-6">
+                    <input type="text" name="firm" class="form-control"
+                        id="firmName">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-3 col-md-6">
+                    <button type="submit" class="button button-default">Выбрать</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="row">
     <div class="col-md-offset-1 col-md-8">
         {% for res in results %}
             {% if forloop.first %}
                 <h3 data-name="{{pref}}{{num}}" onclick="clickHeader()">
-                Ведомость {{pref}} {{num}} {{name}} по фирме {{firm}}</h3>
+                Ведомость {{pref}} {{num}} {{name}}</h3>
                     <table class="table-bordered table-condensed">
                     <caption>
                         <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
@@ -13,15 +36,18 @@
                     <tr><th>Номер</th>
                         <th>Название</th><th>Кол.</th><th>Узел</th></tr>
             {% endif %}
-                    <tr data-id="{{res.id}}"
+                <tr><td colspan=4><strong>{{res.0.pref}}</strong></td></tr>
+                {% for r in res %}
+                    <tr data-id="{{r.id}}"
                         {% ifequal res.code "0"%}
                         title="Занулёвано" class="tr-gray"
                         {% endifequal %}>
-                    <td class="num">{{res.num}}</td>
-                    <td>{{res.name}}</td>
-                    <td>{{res.qnt}}</td>
-                    <td>{{res.node}}</td>
+                    <td class="num">{{r.num}}</td>
+                    <td>{{r.name}}</td>
+                    <td>{{r.qnt}}</td>
+                    <td>{{r.node}}</td>
                 </tr>
+                {% endfor %}
             {% if forloop.last%}
                 </table>
             {% endif %}
@@ -39,7 +65,7 @@
 {% script "/js/results.js" %}
 <script type="text/javascript">
     $(document).ready(function() {
-        $('tr:not(:first)').mouseenter(enterRow).click(clickRow);
+        $('tr[data-id]').mouseenter(enterRow).click(clickRow);
         $(document).click(function(){
             $('#popup').hide();
             $('tr.selection').toggleClass('selection');
