--- a/resources/templates/products/results.html
+++ b/resources/templates/products/results.html
@@ -46,6 +46,9 @@
             formaction="{{servlet-context}}/diff/results">Сравнить</button>
     </form>
 </div>
+
+{% include "parameter_panel.html" %}
+
 {% endblock %}
 {% block page-scripts %}
 {% script "/js/results.js" %}
